src/test/ui/borrowck/borrowck-use-in-index-lvalue.ast.nll.stderr
error[E0381]: use of possibly uninitialized variable: `*w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:16:5
   |
LL |     w[5] = 0; //[ast]~ ERROR use of possibly uninitialized variable: `*w` [E0381]
   |     ^^^^ use of possibly uninitialized `*w`

error[E0381]: use of possibly uninitialized variable: `*w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:20:5
   |
LL |     w[5] = 0; //[ast]~ ERROR use of possibly uninitialized variable: `*w` [E0381]
   |     ^^^^ use of possibly uninitialized `*w`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
